prevent e-mail from being wrapped

--- a/style/typography.less
+++ b/style/typography.less
@@ -65,3 +65,7 @@ dt {
         margin: 0;
     }
 }
+
+.dont-break {
+    display: inline-block;
+}
